2001-11-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Fix normalisation.

2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Replace wrong kz by kz0.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Virtualise kz.
	
2001-10-25  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * generalslab.cpp: Add overlap integrals for off-axis incidence.
	